[package]
name = "remote-xy"
description = "Control and monitor your Rust application from your smartphone via a graphical interface (based on RemoteXY)"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/andber1/remote-xy"

[dependencies]
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.3"
tokio = { version = "1", features = ["full"] }
log = "0.4"